general colors selected, shadow to navbar, HS font chosen, etc

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name='viewport' content='width=device-width initial-scale=1.0'>
     <title>Hobby Shopper!</title>
     <link rel="stylesheet" href="/style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3289689b32.js" crossorigin="anonymous"></script>
   </head>
     <script defer src="/bundle.js"></script>
